// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OSC payload snapshots captures EOS-native command line payloads 1`] = `
{
  "address": "/eos/cmd",
  "args": [
    {
      "type": "s",
      "value": "Load Cue 20#",
    },
  ],
  "arguments": "single OSC string containing an EOS command-line command",
  "wireFormat": "eos-native-command",
}
`;

exports[`OSC payload snapshots captures EOS-native command line payloads 2`] = `
{
  "address": "/eos/newcmd",
  "args": [
    {
      "type": "s",
      "value": "Record Cue 1#",
    },
  ],
  "arguments": "single OSC string containing an EOS command-line command",
  "wireFormat": "eos-native-command",
}
`;

exports[`OSC payload snapshots captures EOS-native control surface payloads 1`] = `
{
  "address": "/eos/key/go_0",
  "args": [
    {
      "type": "f",
      "value": 1,
    },
  ],
  "arguments": "EOS-native key press float argument",
  "wireFormat": "eos-native-arguments",
}
`;

exports[`OSC payload snapshots captures EOS-native control surface payloads 2`] = `
{
  "address": "/eos/group/5/level",
  "args": [
    {
      "type": "f",
      "value": 75,
    },
  ],
  "arguments": "EOS-native group level float argument",
  "wireFormat": "eos-native-arguments",
}
`;

exports[`OSC payload snapshots captures EOS-native effect command payloads 1`] = `
{
  "address": "/eos/cmd",
  "args": [
    {
      "type": "s",
      "value": "Effect 12",
    },
  ],
  "arguments": "single OSC string containing \`Effect <number>\`",
  "wireFormat": "eos-native-command",
}
`;

exports[`OSC payload snapshots captures EOS-native effect command payloads 2`] = `
{
  "address": "/eos/cmd",
  "args": [
    {
      "type": "s",
      "value": "Effect 7 Stop",
    },
  ],
  "arguments": "single OSC string containing \`Effect Stop\` or \`Effect <number> Stop\`",
  "wireFormat": "eos-native-command",
}
`;

exports[`OSC payload snapshots captures EOS-native layout payloads 1`] = `
{
  "address": "/eos/fader/1/config/10/0",
  "args": [],
  "arguments": "EOS-native address path encodes bank, fader count, and page",
  "wireFormat": "eos-native-address",
}
`;

exports[`OSC payload snapshots captures EOS-native layout payloads 2`] = `
{
  "address": "/eos/ds/1/config/Chan/10/0/1",
  "args": [],
  "arguments": "EOS-native address path encodes bank, target, buttons, flexi, and page",
  "wireFormat": "eos-native-address",
}
`;

exports[`OSC payload snapshots captures EOS-native show-control command payloads 1`] = `
{
  "address": "/eos/newcmd",
  "args": [
    {
      "type": "s",
      "value": "Show_Control Cue_Send_String "Cue %1 -> %2 (%3)"",
    },
  ],
  "arguments": "single OSC string containing \`Show_Control Cue_Send_String ...\`",
  "wireFormat": "eos-native-command",
}
`;

exports[`OSC payload snapshots captures EOS-native show-control command payloads 2`] = `
{
  "address": "/eos/newcmd",
  "args": [
    {
      "type": "s",
      "value": "Show_Control Cue_Receive_String "Receive %1 [%2]"",
    },
  ],
  "arguments": "single OSC string containing \`Show_Control Cue_Receive_String ...\`",
  "wireFormat": "eos-native-command",
}
`;

exports[`OSC payload snapshots captures JSON parameter payloads 1`] = `
{
  "address": "/eos/chan/param",
  "args": [
    {
      "type": "s",
      "value": "{"channels":[1,2],"parameter":"pan","value":45}",
    },
  ],
  "arguments": "single OSC string containing a JSON object payload",
  "wireFormat": "json-string",
}
`;

exports[`OSC payload snapshots captures JSON parameter payloads 2`] = `
{
  "address": "/eos/dmx/address/dmx",
  "args": [
    {
      "type": "s",
      "value": "{"address":"1/101","value":255}",
    },
  ],
  "arguments": "single OSC string containing a JSON object payload",
  "wireFormat": "json-string",
}
`;

exports[`OSC payload snapshots captures cue/magic sheet EOS-native payloads 1`] = `
{
  "address": "/eos/cmd",
  "args": [
    {
      "type": "s",
      "value": "Cue 1 CueList 2 Fire",
    },
  ],
  "arguments": "single OSC string containing \`Cue ... Fire\`",
  "wireFormat": "eos-native-command",
}
`;

exports[`OSC payload snapshots captures cue/magic sheet EOS-native payloads 2`] = `
{
  "address": "/eos/ms",
  "args": [
    {
      "type": "i",
      "value": 3,
    },
  ],
  "arguments": "OSC integer arguments for magic sheet number and optional view number",
  "wireFormat": "eos-native-arguments",
}
`;
